# badascii

./: Cargo.toml  README.md  example.badascii
badascii/: Cargo.toml  LICENSE  README.md
badascii-backend/: Cargo.toml
badascii-backend/src/: analyze.rs  lib.rs  render.rs  svg.rs  text_buffer.rs
badascii-cli/: Cargo.toml  README.md
badascii-cli/src/: main.rs  postcard.txt
badascii-doc/: Cargo.toml  README.md
badascii-doc/src/: lib.rs
badascii-egui/: Cargo.toml
badascii-egui/src/: lib.rs  logo.txt  main.rs  roughr_egui.rs  startup_screen.txt
badascii-gui/: Cargo.toml  Justfile  index.html
badascii-gui/assets/: icon-1024.xcf  manifest.json  sw.js
badascii-gui/src/: app.rs  lib.rs  main.rs  roughr_egui.rs  startup_screen.txt
badascii-mdbook/: Cargo.toml  README.md
badascii-mdbook/src/: lib.rs  main.rs  test.md  test.txt  test_formal.md
badascii/src/: analyze.rs  bitmap.rs  lib.rs  rect.rs  render.rs  startup_screen.txt  svg.rs  text_buffer.rs
src/: action.rs  analyze.rs  lib.rs  main.rs  svg.rs  tc.rs  text_buffer.rs
src/lib/: analyze.rs  rect.rs  tc.rs  text_buffer.rs
