[package]
name = "badascii-doc"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proc-macro to include BadASCII diagrams into your rustdoc output.  Block diagrams in ASCII."
homepage = "https://badascii.me"
repository = "https://github.com/samitbasu/badascii"
keywords = ["rustdoc", "badascii", "block", "diagram", "ascii"]
authors = ["Samit Basu <basu.samit@gmail.com>"]


[lib]
proc-macro = true

[dependencies]
badascii = { version = "0.1.1", path = "../badascii" }
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"

[dev-dependencies]
expect-test = "1.5.1"
