[package]
name = "badascii-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_dock = "0.16.0"
egui_extras = "0.31.1"
env_logger = "0.11.7"
roughr = "0.9.0"
badascii = { path = "../badascii" }
log = "0.4"
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
expect-test = "1.5.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
