[package]
name = "badascii-mdbook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
badascii = { version = "0.1.0", path = "../badascii" }
clap = "4.5.36"
mdbook = "0.4.48"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
semver = "1.0.26"
serde_json = "1.0.140"

[dev-dependencies]
expect-test = "1.5.1"
